--- a/views/userViewDonorProfile.ejs
+++ b/views/userViewDonorProfile.ejs
@@ -18,7 +18,7 @@
     <script>
         const userid = '<%= userid %>';
     </script>
-    <script type="text/javascript" src="/ejsPages/js/donorProfile.js" defer></script>
+    <!-- //<script type="text/javascript" src="/ejsPages/js/userVisitDonorProfile.js" defer></script> -->
 </head>
 
 <body>
@@ -86,6 +86,7 @@
                     <span>New York, NY</span>
                 </div> -->
                 <p>Blood Group: O+</p>
+               
             </div>
 
             <div class="rank">
@@ -100,17 +101,13 @@
                 </div>
             </div>
 
-            <div class="btns">
-                <ul>
-                    
-
-                 <li class="sendMsg active">
-                        <i class="ri-check-fill ri"></i>
-                        <a href="#">Update Profile</a>
-                    </li>
-
-                </ul>
+            <div class="donation_info">
+                <p>Total Donations: 50</p>
+                <p>Last Donation Date: 15 January,2023</p>
             </div>
+
+
+            
         </section>
 
 
@@ -149,10 +146,10 @@
             <div class="basic_info">
                 <h1 class="heading">Basic Information</h1>
                 <ul>
-                    <li class="birthday">
+                    <!-- <li class="birthday">
                         <h1 class="label">Birthday:</h1>
                         <span class="info">Dec 25, 2000</span>
-                    </li>
+                    </li> -->
 
                     <li class="gender">
                         <h1 class="label">Gender:</h1>
@@ -163,6 +160,7 @@
                         <h1 class="label">Age:</h1>
                         <span class="info">18</span>
                     </li>
+                    
 
 
                 </ul>
