--- a/views/userHomePage.ejs
+++ b/views/userHomePage.ejs
@@ -75,7 +75,7 @@
                </span></a></li> 
         </ul> 
         <ul>
-            <li><a href="/yourRequest?userid=<%= encodeURIComponent(userid) %>"><span class="las la-file-medical-alt">
+            <li><a href="/yourRequests?userid=<%= encodeURIComponent(userid) %>"><span class="las la-file-medical-alt">
              <span>Your Requests</span>
             </span></a></li> 
            </ul>
