--- a/views/yourRequest.ejs
+++ b/views/yourRequest.ejs
@@ -10,6 +10,8 @@
     
     <script>
         const userid = '<%= userid %>';
+        const requestid = '<%= requestid %>';
+        const donorid = '<%= donorid %>';
     </script>
     <script type="text/javascript" src="/ejsPages/js/yourRequest.js" defer></script>
 </head>
