--- a/views/yourRequest.ejs
+++ b/views/yourRequest.ejs
@@ -24,7 +24,7 @@
             <h2>Donor Appointment Updates</h2>
 
         </div>
-        <p id="noAppointmentMessage" style="display: none;"><i class="las la-exclamation-circle"></i> Currently you have no appointment!<br><a class="donate-link" href="/getbloodFromDonor?userid=<%= encodeURIComponent(userid) %>"> Book request now!</a>
+        <p id="noAppointmentMessage" style="display: none;"><i class="las la-exclamation-circle"></i> Currently you have no appointment!!<br><a class="donate-link" href="/getblood?userid=<%= encodeURIComponent(userid) %>"> Book request now!</a>
         </a></p>
         <p id="pendingMessage" style="display: none;"><i class="las la-exclamation-circle"></i>Plase wait! Your appointment is currently pending!</p>
        
