--- a/views/userHomePage.ejs
+++ b/views/userHomePage.ejs
@@ -34,12 +34,12 @@
                         </span></a></li>
             </ul>
             <ul>
-                <li><a href=""><span class="las la-bell">
+                <li><a href="/pendingRequests?userid=<%= encodeURIComponent(userid) %>"><span class="las la-bell">
                             <span>Pending Requests</span>
                         </span></a></li>
             </ul>
             <ul>
-                <li><a href=""><span class="las la-file-medical-alt">
+                <li><a href="/donationHistory?userid=<%= encodeURIComponent(userid) %>"><span class="las la-file-medical-alt">
                             <span>Donation History</span>
                         </span></a></li>
             </ul>
