phone_number issue fixed

--- a/frontendPages/ejsPages/css/userhomepage.css
+++ b/frontendPages/ejsPages/css/userhomepage.css
@@ -662,7 +662,8 @@ main {
 /* //////////////qna/////////////////  */
 
 .qna-div{
-    background-color: #adadad;
+    background-color: #dbd9d9;
+    overflow: auto; /* or overflow: scroll; */
 }
 
 .your-questions-state1{
