--- a/views/getBloodFromDonorToDonor.ejs
+++ b/views/getBloodFromDonorToDonor.ejs
@@ -48,6 +48,7 @@
         <h2>Kindly complete the following form to request blood from our generous donors</h2>
                 <p id="urgent">~Let the donors help you!</p>
                
+               
         <form action="#">
             <%
             // Define currentDate here
@@ -116,6 +117,10 @@
     </div>
     <div class="right-section">
         
+    </div>
+
+    <div id="hii">
+        <p>Currenly you are already in the middle of a transaction with a user.....</p>
     </div>
     
 </div>
