--- a/views/userHomePage.ejs
+++ b/views/userHomePage.ejs
@@ -85,7 +85,7 @@
                             </span></a></li>
                 </ul>
                 <ul>
-                    <li><a href="/yourRequest?userid=<%= encodeURIComponent(userid) %>"><span
+                    <li><a href="/yourRequests?userid=<%= encodeURIComponent(userid) %>"><span
                                 class="las la-file-medical-alt">
                                 <span>Your Requests</span>
                             </span></a></li>
