--- a/frontendPages/ejsPages/css/pendingR.css
+++ b/frontendPages/ejsPages/css/pendingR.css
@@ -228,7 +228,7 @@
     margin-bottom: 50px;
 }
 
-.rounded-button:hover2 {
+.rounded-button2:hover {
     background-color: #442931; /* Darker shade for hover effect */
 }
 
