--- a/views/yourRequest.ejs
+++ b/views/yourRequest.ejs
@@ -33,7 +33,7 @@
         <p id="bankname" style="display: none;">
             <h2 id="bname" class="las la-hand-holding-heart" style="display: none;">here</h2>   
         </p>
-        <button id="visit" style="display: none;">Visit Donor Profile</button>
+        <button id="visit" style="display: none;" onclick="visitDonorProfile()">Visit Donor Profile</button>
         <div id="successMessage" style="display: none;">
         <i class="las la-heart"></i> <strong>A DONOR JUST SAVED YOUR LIFE!</strong>
             <br>
