--- a/views/userHomePage.ejs
+++ b/views/userHomePage.ejs
@@ -38,6 +38,13 @@
                             <span>Pending Requests</span>
                         </span></a></li>
             </ul>
+             
+            <ul>
+                <li><a href="/userDonationUpdate?userid=<%= encodeURIComponent(userid) %>"><span class="las la-tint">
+                            <span>User Donation Update</span>
+                        </span></a></li>
+            </ul>
+
             <ul>
                 <li><a href="/donationHistory?userid=<%= encodeURIComponent(userid) %>"><span class="las la-file-medical-alt">
                             <span>Donation History</span>
@@ -49,6 +56,9 @@
                                 <span>Donate Blood</span>
                             </span></a></li>
                 </ul>
+
+
+                
 
                 <!-- <li><a href=""><span class="las la-hand-point-down">
              <span>Request Blood</span>
