--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -70,17 +70,15 @@
 
             <!-- ===== ===== Work Contaienr ===== ===== -->
             <div class="work">
-                <h1 class="heading">Reviews</h1>
+                
                 <div class="primary">
-                    <h1>Spotify New York</h1>
-                    <span>Primary</span>
-                    <p>170 William Street <br> New York, NY 10038-212-315-51</p>
+                    <h1>THANKS FOR BEING WITH BLOOD BRIDGE</h1>
+                
                 </div>
 
                 <div class="secondary">
-                    <h1>Metropolitan <br> Museum</h1>
-                    <span>Secondary</span>
-                    <p>S34 E 65th Street <br> New York, NY 10651-78 156-187-60</p>
+                    <h1> WE ALWAYS WELCOME YOU<br> </h1>
+                    
                 </div>
             </div>
 
@@ -108,7 +106,7 @@
                 <p>Blood Group: O+</p>
             </div>
 
-            <div class="rank">
+            <!-- <div class="rank">
                 <h1 class="heading">Ratings</h1>
                 <span>8.6</span>
                 <div class="rating">
@@ -118,7 +116,7 @@
                     <i class="ri-star-fill rate"></i>
                     <i class="ri-star-fill underrate"></i>
                 </div>
-            </div>
+            </div> -->
 
             <div class="btns">
                 <ul>
